# Raspberry_Webserver

./: CMakeLists.txt  Makefile
css/: style.css
js/: script.js
page/: index.html
src/: client_info.h  definitions.h  endpoints.c  endpoints.h  file.c  file.h  http.c  http.h  routes.c  routes.h  server.c  server.h  webserver.c
